# payment_emulation

./: .gitignore  .readthedocs.yaml  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: pipiline.yaml  publish.yaml  publish_test.yaml
docs/: CLI.md  account_and_card.md  contributing.md  index.md  middleware.md  payment_modal.md  transactions.md  tutorial.md
docs/assets/partials/: account_card_create.md  exemple_home.md  exemple_transaction.md  exemple_tutorial.md  installation_pt.md  license.md  seeds.md
docs/en/: tutorial.md
docs/payment/: PaymentSDK.md
docs/pt/payment/: PaymentSDK.md
docs/translate/: generators.py  paymentSDK.py
docs/utils/: generators.md
payment_emulation/: .readthedocs.yaml  LICENSE  README.md  __main__.py  mkdocs.yml
payment_emulation/core/: settings.py
payment_emulation/docs/assets/partials/: account_card_create.md  exemple_home.md  exemple_tutorial.md  installation_en.md  installation_pt.md  license.md  seeds.md
payment_emulation/docs/en/: index.md  tutorial.md
payment_emulation/docs/en/payment/: PaymentSDK.md
payment_emulation/docs/en/utils/: generators.md
payment_emulation/docs/pt/: index.md  tutorial.md
payment_emulation/docs/pt/payment/: PaymentSDK.md
payment_emulation/docs/pt/utils/: generators.md
payment_emulation/payment/: admin.py  apps.py  middleware.py  models.py  paymentSDK.py
payment_emulation/payment/management/commands/: createseeds.py  deleteseeds.py  setbalance.py
payment_emulation/payment/migrations/: 0001_initial.py  0002_insert_seeds.py
payment_emulation/payment/static/payment/css/: output.css
payment_emulation/payment/static/payment/js/: paymentModal.js
payment_emulation/payment/templates/payment/: payment_modal.html
payment_emulation/payment/tests/: tests_commands.py  tests_middleware.py  tests_models.py  tests_paymentSDK.py
payment_emulation/translate/: paymentSDK.py
payment_emulation/utils/: generators.py
payment_emulation/utils/tests/: tests_generators.py
