[project]
name = "payment-emulation"
version = "0.1.0"
description = "Uma biblioteca desenvolvida para ser utilizada em projetos Django para emular pagamentos com cartão bancário."
authors = [
    {name = "Valdean",email = "valdeanjose6@gmail.com"}
]
readme = "README.md"
license = { file = "payment_emulation/LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "pycpfcnpj (>=1.8) ; python_version >= '3.8' and python_version < '4.0'",
]
keywords = ["payment", "emulation", "SDK", "implementation", "e-commerce"]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
homepage = "https://python-poetry.org/"
repository = "https://github.com/python-poetry/poetry"
documentation = "https://python-poetry.org/docs/"
"Bug Tracker" = "https://github.com/python-poetry/poetry/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coverage = "^7.6.10"
pytest-django = "^4.9.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
mkdocs-static-i18n = "^1.2.3"
mkdocstrings-python = "^1.13.0"
markdown-include = "^0.8.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "payment_emulation.core.settings"
# pythonpath = "."
# norecursedirs = ["venv"]
python_files = ["test_*.py", "tests_*.py", "*_test.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "tests_*"]
console_output_style = "compact"  # (classic, progress, compact)
filterwarnings = [
    "ignore::DeprecationWarning",
    "error::RuntimeWarning"
]
addopts = [
    "-vv",
    "-s",
    "--cov=payment_emualtion.payment,payment_emualtion.utils"
]

[tool.coverage.run]
source = ["tests"]
omit = [
    "*/__init__.py",
    "*/admin.py",
    "*/apps.py",
    "*/tests/__init__.py",
    "*/management/__init__.py",
    "*/migrations/0001_initial.py",
    "*/docs/*",
    "*/translate/*"
]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/admin.py",
    "*/apps.py",
    "*/tests/__init__.py",
    "*/management/__init__.py",
    "*/migrations/0001_initial.py",
    "*/docs/*",
    "*/translate/*"
]
